--- a/main.html
+++ b/main.html
@@ -8,7 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <ol>
+		<li data-ns-test='shoppingList'>Car</li>
+		<li data-ns-test='shoppingList'>House</li>
+		<li data-ns-test='shoppingList'>Land</li>
+	</ol>
+	<ul>
+		<li data-ns-test='holidayList'>Himalaya</li>
+		<li data-ns-test='holidayList'>Switzerland</li>
+		<li data-ns-test='holidayList'>Philippines</li>
+	</ul>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
